# capsule-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  TOOLS.md  add-to-cursor.html  pyproject.toml  render.yaml  requirements.txt  run_server.sh  setup.py
.github/workflows/: test.yml
capsule_mcp/: __init__.py  models.py  server.py
scripts/: generate-cursor-link.js  print_mcp_routes.py  validate-configs.py
tests/: __init__.py  test_server.py
