[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule-mcp-server"
version = "0.1.0"
description = "Capsule CRM MCP server exposing REST endpoints as AI tools"
authors = [{ name = "Fuzzy Labs", email = "tom@fuzzylabs.ai" }]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastmcp>=2.2.5",
    "httpx>=0.25",
    "python-dotenv",
    "uvicorn[standard]",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/fuzzylabs/capsule-crm-mcp-server"

[tool.setuptools.packages.find]
where = ["."]
